--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <td><img src="circle-cropped.png" alt = "Picture"></td>
     <td><h1>Srividya Mulgund</h1>
     <p><em><strong>Software Engineer </strong> and proud mum of 2 kids</em></p>
-    <p>I am excited to build my first web page after more than 15 years. I am a Business Intelligence professional with more than 10 years of experience building data warehouses and reports to make better decision making.</p>
+    <p>I am excited to build my first web page after more than 15 years. I am a Business Intelligence professional with more than 10 years of experience building data warehouses and reports to make better decisions.</p>
 </td>    
 </tr>
     </tbody>    
